[gd_scene load_steps=7 format=3 uid="uid://c2gschcd6i6ee"]

[ext_resource type="Texture2D" uid="uid://duwagy5gipet0" path="res://resources/graphics/player/player.png" id="1_dovo2"]
[ext_resource type="Script" uid="uid://du75imutbisiu" path="res://scenes/player/player.gd" id="1_gmlin"]
[ext_resource type="PackedScene" uid="uid://cyguol628ducy" path="res://scenes/objects/lights/flashlight.tscn" id="3_gmlin"]
[ext_resource type="PackedScene" uid="uid://bphhncy6ap4o4" path="res://scenes/particles/laser_particles.tscn" id="3_lvxji"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dovo2"]
radius = 63.0079

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_dovo2"]
polygon = PackedVector2Array(-57, -21, -59, -1, -53, 14, -42, 31, -33, 50, -20, 59, -4, 57, 7, 57, 26, 46, 39, 41, 55, 43, 70, 55, 92, 54, 102, 40, 119, 38, 128, 34, 136, 19, 131, 6, 122, 0, 103, -2, 91, -10, 80, -11, 64, -26, 52, -27, 45, -42, 30, -58, 14, -62, -4, -60, -22, -53, -39, -46, -53, -35)

[node name="Player" type="CharacterBody2D" groups=["Entity"]]
collision_mask = 31
script = ExtResource("1_gmlin")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dovo2")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_dovo2")

[node name="PlayerImg" type="Sprite2D" parent="."]
position = Vector2(37, 0)
rotation = 1.5708
texture = ExtResource("1_dovo2")

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="GrenadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GunTip" type="Marker2D" parent="."]
position = Vector2(133, 20)

[node name="LaserParticles" parent="." instance=ExtResource("3_lvxji")]
position = Vector2(134, 20)

[node name="Flashlight" parent="." instance=ExtResource("3_gmlin")]
position = Vector2(136, 20)

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_timeout"]
